--- a/ai.html
+++ b/ai.html
@@ -3,90 +3,162 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Exel AI</title>
+<title>Exel AI — Modern Chat</title>
 <style>
+  /* Body & Background */
   body {
     margin: 0;
-    font-family: Arial, sans-serif;
-    background: linear-gradient(135deg, #0f0f0f, #1a1a1a);
-    color: #fff;
+    font-family: 'Segoe UI', Arial, sans-serif;
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background: #0a0a0a;
+    transition: background 2s;
+    color: #fff;
   }
 
+  /* Header */
   header {
-    padding: 15px;
+    padding: 15px 20px;
     background: #111;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
   }
 
-  header h1 { margin: 0; }
+  header h1 {
+    margin: 0;
+    font-size: 1.6rem;
+    letter-spacing: 1px;
+  }
 
+  header button {
+    background: #0af;
+    border: none;
+    color: #000;
+    padding: 8px 16px;
+    border-radius: 15px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+
+  header button:hover {
+    background: #00dfff;
+  }
+
+  /* Tabs */
   #tabs {
     display: flex;
     border-bottom: 1px solid #333;
+    overflow-x: auto;
+    background: #111;
   }
 
   .tab {
     padding: 10px 20px;
     cursor: pointer;
     border-right: 1px solid #333;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    margin: 5px;
     background: #111;
+    transition: 0.3s;
+    flex-shrink: 0;
   }
 
-  .tab.active { background: #222; }
+  .tab.active {
+    background: #222;
+  }
 
+  /* Chat Container */
   #chatContainer {
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 15px;
   }
 
   #chatbox {
     flex: 1;
     overflow-y: auto;
-    padding: 10px;
+    padding: 15px;
     background: #111;
-    border-radius: 10px;
-    margin-bottom: 10px;
+    border-radius: 20px;
+    margin-bottom: 15px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.5);
   }
 
-  .user { color: #0af; margin: 5px 0; }
-  .bot { color: #0f0; margin: 5px 0; }
+  /* Messages */
+  .user {
+    color: #0af;
+    margin: 8px 0;
+    padding: 8px 12px;
+    background: #111;
+    border-radius: 15px;
+    display: inline-block;
+  }
 
+  .bot {
+    color: #0f0;
+    margin: 8px 0;
+    padding: 8px 12px;
+    background: #111;
+    border-radius: 15px;
+    display: inline-block;
+  }
+
+  /* Input */
   #inputContainer {
     display: flex;
   }
 
   #userInput {
     flex: 1;
-    padding: 10px;
-    border-radius: 10px;
+    padding: 12px 15px;
+    border-radius: 20px;
     border: none;
     background: #222;
     color: #fff;
+    outline: none;
+    font-size: 1rem;
   }
 
   #sendBtn {
-    padding: 10px 20px;
-    margin-left: 5px;
+    padding: 12px 20px;
+    margin-left: 10px;
+    border-radius: 20px;
     border: none;
-    border-radius: 10px;
     background: #0af;
     color: #000;
     cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s;
   }
+
+  #sendBtn:hover {
+    background: #00dfff;
+  }
+
+  /* Scrollbar Styling */
+  #chatbox::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  #chatbox::-webkit-scrollbar-thumb {
+    background: #333;
+    border-radius: 10px;
+  }
+
 </style>
 </head>
 <body>
 
 <header>
   <h1>Exel AI</h1>
-  <button onclick="addTab()">+ New AI</button>
+  <button onclick="addTab()">+ New Chat</button>
 </header>
 
 <div id="tabs"></div>
@@ -94,80 +166,107 @@
 <div id="chatContainer">
   <div id="chatbox"></div>
   <div id="inputContainer">
-    <input type="text" id="userInput" placeholder="Ask me anything..." />
+    <input type="text" id="userInput" placeholder="Ask anything..." />
     <button id="sendBtn">Send</button>
   </div>
 </div>
 
 <script>
+const HF_TOKEN = "YOUR_HUGGINGFACE_TOKEN_HERE"; // Replace with your free Hugging Face token
+const API_URL = "https://api-inference.huggingface.co/v1/chat/completions";
+
 let tabs = [];
 let activeTab = 0;
 
-// Initialize first tab
+// Animate background every 5 seconds
+let colors = ["#0a0a0a", "#1a1a1a"];
+let index = 0;
+setInterval(() => {
+  index = (index + 1) % colors.length;
+  document.body.style.background = colors[index];
+}, 5000);
+
+// Initialize first chat tab
 addTab();
 
+// Add new tab
 function addTab() {
-  const tabId = tabs.length;
+  const id = tabs.length;
   tabs.push({ messages: [] });
-
   const tabEl = document.createElement("div");
   tabEl.className = "tab";
-  tabEl.textContent = "AI " + (tabId + 1);
-  tabEl.onclick = () => switchTab(tabId);
+  tabEl.textContent = "Chat " + (id + 1);
+  tabEl.onclick = () => switchTab(id);
   document.getElementById("tabs").appendChild(tabEl);
-
-  switchTab(tabId);
+  switchTab(id);
 }
 
-function switchTab(id) {
-  activeTab = id;
-  const tabEls = document.querySelectorAll(".tab");
-  tabEls.forEach((t, i) => t.classList.toggle("active", i === id));
+// Switch between tabs
+function switchTab(i) {
+  activeTab = i;
+  document.querySelectorAll(".tab").forEach((t,j) => t.classList.toggle("active", i===j));
   renderChat();
 }
 
+// Render chat messages
 function renderChat() {
-  const chatbox = document.getElementById("chatbox");
-  chatbox.innerHTML = "";
-  tabs[activeTab].messages.forEach(msg => {
+  const box = document.getElementById("chatbox");
+  box.innerHTML = "";
+  tabs[activeTab].messages.forEach(m => {
     const div = document.createElement("div");
-    div.className = msg.sender;
-    div.textContent = msg.text;
-    chatbox.appendChild(div);
+    div.className = m.sender;
+    div.textContent = m.text;
+    box.appendChild(div);
   });
-  chatbox.scrollTop = chatbox.scrollHeight;
+  box.scrollTop = box.scrollHeight;
 }
 
+// Send message
 document.getElementById("sendBtn").onclick = sendMessage;
 document.getElementById("userInput").addEventListener("keypress", e => {
   if(e.key === "Enter") sendMessage();
 });
 
-function sendMessage() {
-  const input = document.getElementById("userInput");
-  const text = input.value.trim();
+async function sendMessage() {
+  const text = document.getElementById("userInput").value.trim();
   if(!text) return;
-  input.value = "";
-
+  document.getElementById("userInput").value = "";
   addMessage("user", text);
+  addMessage("bot", "Typing... ⏳");
 
-  // Fake instant AI response (replace with free API if needed)
-  setTimeout(() => {
-    addMessage("bot", generateResponse(text));
-  }, 300);
+  try {
+    const messages = [
+      { role:"system", content:"You are a helpful assistant." },
+      ...tabs[activeTab].messages.filter(m => m.sender==="user").map(m => ({ role:"user", content:m.text })),
+      { role:"user", content:text }
+    ];
+
+    const res = await fetch(API_URL, {
+      method: "POST",
+      headers: {
+        "Authorization": "Bearer " + HF_TOKEN,
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({ model: "microsoft/Phi-3-mini-4k-instruct", messages })
+    });
+
+    const data = await res.json();
+    const aiText = data.choices?.[0]?.message?.content || "Sorry, AI returned no response.";
+    
+    // Remove "Typing..." placeholder
+    tabs[activeTab].messages = tabs[activeTab].messages.filter(m => m.text !== "Typing... ⏳");
+    addMessage("bot", aiText);
+
+  } catch(e) {
+    tabs[activeTab].messages = tabs[activeTab].messages.filter(m => m.text !== "Typing... ⏳");
+    addMessage("bot", "[Error contacting AI]");
+  }
 }
 
+// Add message to current tab
 function addMessage(sender, text) {
   tabs[activeTab].messages.push({ sender, text });
   renderChat();
-}
-
-// Simple local AI simulation (completely free)
-function generateResponse(text) {
-  const lower = text.toLowerCase();
-  if(lower.includes("hello")) return "Hello! I'm Exel AI. How can I help you today?";
-  if(lower.includes("time")) return "I can't tell real time in this demo.";
-  return "This is a free demo of Exel AI. For live AI, a backend is required.";
 }
 </script>
 
