--- a/ai.html
+++ b/ai.html
@@ -2,162 +2,173 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>Exel AI — Premium</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Exel AI — Modern Chat</title>
 <style>
-  /* Body & Background */
-  body {
-    margin: 0;
-    font-family: 'Segoe UI', Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    background: #0a0a0a;
-    transition: background 2s;
-    color: #fff;
-  }
+/* ----- Body & Animated Background ----- */
+body {
+  margin: 0;
+  font-family: 'Segoe UI', Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  background: linear-gradient(135deg, #1a1a1a, #0a0a0a);
+  background-size: 400% 400%;
+  animation: bgGradient 10s ease infinite;
+  color: #fff;
+  overflow: hidden;
+}
 
-  /* Header */
-  header {
-    padding: 15px 20px;
-    background: #111;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-  }
+@keyframes bgGradient {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
 
-  header h1 {
-    margin: 0;
-    font-size: 1.6rem;
-    letter-spacing: 1px;
-  }
+/* ----- Animated Gradient Text ----- */
+@keyframes gradientText {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+.gradient-text {
+  font-weight: bold;
+  font-size: 1.8rem;
+  background: linear-gradient(90deg,#0af,#0f0,#0af);
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradientText 4s ease infinite;
+}
 
-  header button {
-    background: #0af;
-    border: none;
-    color: #000;
-    padding: 8px 16px;
-    border-radius: 15px;
-    cursor: pointer;
-    font-weight: bold;
-    transition: 0.3s;
-  }
+/* ----- Header ----- */
+header {
+  padding: 15px 20px;
+  background: #111;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  box-shadow: 0 0 15px rgba(0,255,255,0.2);
+}
+header button {
+  padding: 10px 18px;
+  border-radius: 25px;
+  border: none;
+  font-weight: bold;
+  color: #000;
+  cursor: pointer;
+  background: #0af;
+  box-shadow: 0 0 15px #0af;
+  transition: 0.3s;
+}
+header button:hover {
+  background: #00ffff;
+  box-shadow: 0 0 25px #0af;
+}
 
-  header button:hover {
-    background: #00dfff;
-  }
+/* ----- Tabs ----- */
+#tabs {
+  display: flex;
+  overflow-x: auto;
+  padding: 5px 10px;
+}
+.tab {
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 20px 20px 0 0;
+  margin: 0 5px;
+  background: #111;
+  transition: 0.3s;
+  flex-shrink: 0;
+  box-shadow: 0 0 8px rgba(0,255,255,0.2);
+}
+.tab.active {
+  background: #222;
+  box-shadow: 0 0 20px #0ff;
+}
 
-  /* Tabs */
-  #tabs {
-    display: flex;
-    border-bottom: 1px solid #333;
-    overflow-x: auto;
-    background: #111;
-  }
+/* ----- Chat Container ----- */
+#chatContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+}
+#chatbox {
+  flex: 1;
+  overflow-y: auto;
+  padding: 15px;
+  background: #111;
+  border-radius: 25px;
+  margin-bottom: 15px;
+  box-shadow: 0 0 20px rgba(0,255,255,0.1);
+}
+.message {
+  padding: 12px 18px;
+  border-radius: 25px;
+  margin: 8px 0;
+  max-width: 80%;
+  word-wrap: break-word;
+  display: inline-block;
+}
+.user {
+  background: #0af2;
+  color: #0ff;
+  align-self: flex-end;
+}
+.bot {
+  background: #0f02;
+  color: #0f0;
+  align-self: flex-start;
+}
 
-  .tab {
-    padding: 10px 20px;
-    cursor: pointer;
-    border-right: 1px solid #333;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    margin: 5px;
-    background: #111;
-    transition: 0.3s;
-    flex-shrink: 0;
-  }
+/* ----- Input ----- */
+#inputContainer {
+  display: flex;
+}
+#userInput {
+  flex: 1;
+  padding: 14px 18px;
+  border-radius: 25px;
+  border: none;
+  background: #222;
+  color: #fff;
+  font-size: 1rem;
+  outline: none;
+}
+#sendBtn {
+  padding: 14px 20px;
+  margin-left: 10px;
+  border-radius: 25px;
+  border: none;
+  background: #0af;
+  color: #000;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 0 15px #0af;
+  transition: 0.3s;
+}
+#sendBtn:hover {
+  background: #00ffff;
+  box-shadow: 0 0 30px #0af;
+}
 
-  .tab.active {
-    background: #222;
-  }
-
-  /* Chat Container */
-  #chatContainer {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    padding: 15px;
-  }
-
-  #chatbox {
-    flex: 1;
-    overflow-y: auto;
-    padding: 15px;
-    background: #111;
-    border-radius: 20px;
-    margin-bottom: 15px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.5);
-  }
-
-  /* Messages */
-  .user {
-    color: #0af;
-    margin: 8px 0;
-    padding: 8px 12px;
-    background: #111;
-    border-radius: 15px;
-    display: inline-block;
-  }
-
-  .bot {
-    color: #0f0;
-    margin: 8px 0;
-    padding: 8px 12px;
-    background: #111;
-    border-radius: 15px;
-    display: inline-block;
-  }
-
-  /* Input */
-  #inputContainer {
-    display: flex;
-  }
-
-  #userInput {
-    flex: 1;
-    padding: 12px 15px;
-    border-radius: 20px;
-    border: none;
-    background: #222;
-    color: #fff;
-    outline: none;
-    font-size: 1rem;
-  }
-
-  #sendBtn {
-    padding: 12px 20px;
-    margin-left: 10px;
-    border-radius: 20px;
-    border: none;
-    background: #0af;
-    color: #000;
-    cursor: pointer;
-    font-weight: bold;
-    transition: 0.3s;
-  }
-
-  #sendBtn:hover {
-    background: #00dfff;
-  }
-
-  /* Scrollbar Styling */
-  #chatbox::-webkit-scrollbar {
-    width: 8px;
-  }
-
-  #chatbox::-webkit-scrollbar-thumb {
-    background: #333;
-    border-radius: 10px;
-  }
-
+/* ----- Scrollbar ----- */
+#chatbox::-webkit-scrollbar {
+  width: 8px;
+}
+#chatbox::-webkit-scrollbar-thumb {
+  background: #333;
+  border-radius: 10px;
+}
 </style>
 </head>
 <body>
 
 <header>
-  <h1>Exel AI</h1>
+  <div class="gradient-text">Exel AI</div>
   <button onclick="addTab()">+ New Chat</button>
 </header>
 
@@ -172,19 +183,13 @@
 </div>
 
 <script>
-const HF_TOKEN = "YOUR_HUGGINGFACE_TOKEN_HERE"; // Replace with your free Hugging Face token
-const API_URL = "https://api-inference.huggingface.co/v1/chat/completions";
+// -------- Configuration --------
+// Use Hugging Face free model
+const HF_MODEL = "gpt2"; // works publicly without API key
+const HF_API_URL = `https://api-inference.huggingface.co/models/${HF_MODEL}`;
 
 let tabs = [];
 let activeTab = 0;
-
-// Animate background every 5 seconds
-let colors = ["#0a0a0a", "#1a1a1a"];
-let index = 0;
-setInterval(() => {
-  index = (index + 1) % colors.length;
-  document.body.style.background = colors[index];
-}, 5000);
 
 // Initialize first chat tab
 addTab();
@@ -192,80 +197,69 @@ addTab();
 // Add new tab
 function addTab() {
   const id = tabs.length;
-  tabs.push({ messages: [] });
+  tabs.push({messages:[]});
   const tabEl = document.createElement("div");
   tabEl.className = "tab";
-  tabEl.textContent = "Chat " + (id + 1);
+  tabEl.textContent = "Chat "+(id+1);
   tabEl.onclick = () => switchTab(id);
   document.getElementById("tabs").appendChild(tabEl);
   switchTab(id);
 }
 
-// Switch between tabs
-function switchTab(i) {
+// Switch tabs
+function switchTab(i){
   activeTab = i;
-  document.querySelectorAll(".tab").forEach((t,j) => t.classList.toggle("active", i===j));
+  document.querySelectorAll(".tab").forEach((t,j)=>t.classList.toggle("active", i===j));
   renderChat();
 }
 
-// Render chat messages
-function renderChat() {
+// Render chat
+function renderChat(){
   const box = document.getElementById("chatbox");
   box.innerHTML = "";
-  tabs[activeTab].messages.forEach(m => {
-    const div = document.createElement("div");
-    div.className = m.sender;
-    div.textContent = m.text;
-    box.appendChild(div);
+  tabs[activeTab].messages.forEach(m=>{
+    const d = document.createElement("div");
+    d.className = "message "+m.sender;
+    d.textContent = m.text;
+    box.appendChild(d);
   });
   box.scrollTop = box.scrollHeight;
 }
 
 // Send message
 document.getElementById("sendBtn").onclick = sendMessage;
-document.getElementById("userInput").addEventListener("keypress", e => {
-  if(e.key === "Enter") sendMessage();
-});
+document.getElementById("userInput").addEventListener("keypress", e => { if(e.key==="Enter") sendMessage(); });
 
-async function sendMessage() {
-  const text = document.getElementById("userInput").value.trim();
+async function sendMessage(){
+  const input = document.getElementById("userInput");
+  const text = input.value.trim();
   if(!text) return;
-  document.getElementById("userInput").value = "";
+  input.value = "";
   addMessage("user", text);
   addMessage("bot", "Typing... ⏳");
 
   try {
-    const messages = [
-      { role:"system", content:"You are a helpful assistant." },
-      ...tabs[activeTab].messages.filter(m => m.sender==="user").map(m => ({ role:"user", content:m.text })),
-      { role:"user", content:text }
-    ];
-
-    const res = await fetch(API_URL, {
+    // Use Hugging Face text-generation endpoint
+    const res = await fetch(HF_API_URL, {
       method: "POST",
-      headers: {
-        "Authorization": "Bearer " + HF_TOKEN,
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({ model: "microsoft/Phi-3-mini-4k-instruct", messages })
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ inputs: text, options: { wait_for_model: true } })
     });
-
     const data = await res.json();
-    const aiText = data.choices?.[0]?.message?.content || "Sorry, AI returned no response.";
-    
-    // Remove "Typing..." placeholder
-    tabs[activeTab].messages = tabs[activeTab].messages.filter(m => m.text !== "Typing... ⏳");
+    const aiText = data[0]?.generated_text ? data[0].generated_text.replace(text,'').trim() : "Sorry, no response";
+
+    tabs[activeTab].messages = tabs[activeTab].messages.filter(m=>m.text!=="Typing... ⏳");
     addMessage("bot", aiText);
 
-  } catch(e) {
-    tabs[activeTab].messages = tabs[activeTab].messages.filter(m => m.text !== "Typing... ⏳");
+  } catch(e){
+    tabs[activeTab].messages = tabs[activeTab].messages.filter(m=>m.text!=="Typing... ⏳");
     addMessage("bot", "[Error contacting AI]");
   }
 }
 
 // Add message to current tab
-function addMessage(sender, text) {
-  tabs[activeTab].messages.push({ sender, text });
+function addMessage(sender,text){
+  tabs[activeTab].messages.push({sender,text});
   renderChat();
 }
 </script>
