--- a/ai.html
+++ b/ai.html
@@ -2,265 +2,106 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Exel AI — Premium</title>
+<title>Exel AI — Free Version</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-/* ----- Body & Animated Background ----- */
 body {
-  margin: 0;
-  font-family: 'Segoe UI', Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  background: linear-gradient(135deg, #1a1a1a, #0a0a0a);
-  background-size: 400% 400%;
-  animation: bgGradient 10s ease infinite;
-  color: #fff;
-  overflow: hidden;
+  margin:0;
+  font-family:'Segoe UI',Arial,sans-serif;
+  display:flex;
+  flex-direction:column;
+  height:100vh;
+  background: linear-gradient(135deg,#1a1a1a,#0a0a0a);
+  background-size:400% 400%;
+  animation:bgGradient 10s ease infinite;
+  color:#fff;
 }
-
-@keyframes bgGradient {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
-
-/* ----- Animated Gradient Text ----- */
-@keyframes gradientText {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
-.gradient-text {
-  font-weight: bold;
-  font-size: 1.8rem;
-  background: linear-gradient(90deg,#0af,#0f0,#0af);
-  background-size: 200% 200%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: gradientText 4s ease infinite;
-}
-
-/* ----- Header ----- */
+@keyframes bgGradient {0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;}}
 header {
-  padding: 15px 20px;
-  background: #111;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  box-shadow: 0 0 15px rgba(0,255,255,0.2);
+  padding:15px 20px;
+  background:#111;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  border-bottom-left-radius:20px;
+  border-bottom-right-radius:20px;
+  box-shadow:0 0 15px rgba(0,255,255,0.2);
 }
-header button {
-  padding: 10px 18px;
-  border-radius: 25px;
-  border: none;
-  font-weight: bold;
-  color: #000;
-  cursor: pointer;
-  background: #0af;
-  box-shadow: 0 0 15px #0af;
-  transition: 0.3s;
+header .title {
+  font-weight:bold;
+  font-size:1.8rem;
+  background:linear-gradient(90deg,#0af,#0f0,#0af);
+  background-size:200% 200%;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  animation:gradientText 4s ease infinite;
 }
-header button:hover {
-  background: #00ffff;
-  box-shadow: 0 0 25px #0af;
-}
-
-/* ----- Tabs ----- */
-#tabs {
-  display: flex;
-  overflow-x: auto;
-  padding: 5px 10px;
-}
-.tab {
-  padding: 10px 20px;
-  cursor: pointer;
-  border-radius: 20px 20px 0 0;
-  margin: 0 5px;
-  background: #111;
-  transition: 0.3s;
-  flex-shrink: 0;
-  box-shadow: 0 0 8px rgba(0,255,255,0.2);
-}
-.tab.active {
-  background: #222;
-  box-shadow: 0 0 20px #0ff;
-}
-
-/* ----- Chat Container ----- */
-#chatContainer {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  padding: 15px;
-}
-#chatbox {
-  flex: 1;
-  overflow-y: auto;
-  padding: 15px;
-  background: #111;
-  border-radius: 25px;
-  margin-bottom: 15px;
-  box-shadow: 0 0 20px rgba(0,255,255,0.1);
-}
-.message {
-  padding: 12px 18px;
-  border-radius: 25px;
-  margin: 8px 0;
-  max-width: 80%;
-  word-wrap: break-word;
-  display: inline-block;
-}
-.user {
-  background: #0af2;
-  color: #0ff;
-  align-self: flex-end;
-}
-.bot {
-  background: #0f02;
-  color: #0f0;
-  align-self: flex-start;
-}
-
-/* ----- Input ----- */
-#inputContainer {
-  display: flex;
-}
-#userInput {
-  flex: 1;
-  padding: 14px 18px;
-  border-radius: 25px;
-  border: none;
-  background: #222;
-  color: #fff;
-  font-size: 1rem;
-  outline: none;
-}
-#sendBtn {
-  padding: 14px 20px;
-  margin-left: 10px;
-  border-radius: 25px;
-  border: none;
-  background: #0af;
-  color: #000;
-  font-weight: bold;
-  cursor: pointer;
-  box-shadow: 0 0 15px #0af;
-  transition: 0.3s;
-}
-#sendBtn:hover {
-  background: #00ffff;
-  box-shadow: 0 0 30px #0af;
-}
-
-/* ----- Scrollbar ----- */
-#chatbox::-webkit-scrollbar {
-  width: 8px;
-}
-#chatbox::-webkit-scrollbar-thumb {
-  background: #333;
-  border-radius: 10px;
-}
+@keyframes gradientText {0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;}}
+#chatbox {flex:1;overflow-y:auto;padding:15px;background:#111;border-radius:25px;margin:15px;box-shadow:0 0 20px rgba(0,255,255,0.1);}
+.message {padding:12px 18px;border-radius:25px;margin:8px 0;max-width:80%;word-wrap:break-word;display:inline-block;}
+.user {background:#0af2;color:#0ff;align-self:flex-end;}
+.bot {background:#0f02;color:#0f0;align-self:flex-start;}
+#inputContainer {display:flex;padding:15px;}
+#userInput {flex:1;padding:14px 18px;border-radius:25px;border:none;background:#222;color:#fff;font-size:1rem;outline:none;}
+#sendBtn {padding:14px 20px;margin-left:10px;border-radius:25px;border:none;background:#0af;color:#000;font-weight:bold;cursor:pointer;box-shadow:0 0 15px #0af;transition:.3s;}
+#sendBtn:hover {background:#00ffff;box-shadow:0 0 30px #0af;}
 </style>
 </head>
 <body>
 
 <header>
-  <div class="gradient-text">Exel AI</div>
-  <button onclick="addTab()">+ New Chat</button>
+  <div class="title">Exel AI</div>
 </header>
 
-<div id="tabs"></div>
-
-<div id="chatContainer">
-  <div id="chatbox"></div>
-  <div id="inputContainer">
-    <input type="text" id="userInput" placeholder="Ask anything..." />
-    <button id="sendBtn">Send</button>
-  </div>
+<div id="chatbox"></div>
+<div id="inputContainer">
+  <input type="text" id="userInput" placeholder="Ask anything..." />
+  <button id="sendBtn">Send</button>
 </div>
 
+<!-- TensorFlow.js and GPT-2 small -->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.9.0/dist/tf.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@xenova/transformers@1.0.4/dist/transformers.min.js"></script>
 <script>
-// -------- Configuration --------
-// Use Hugging Face free model
-const HF_MODEL = "gpt2"; // works publicly without API key
-const HF_API_URL = `https://api-inference.huggingface.co/models/${HF_MODEL}`;
-
-let tabs = [];
-let activeTab = 0;
-
-// Initialize first chat tab
-addTab();
-
-// Add new tab
-function addTab() {
-  const id = tabs.length;
-  tabs.push({messages:[]});
-  const tabEl = document.createElement("div");
-  tabEl.className = "tab";
-  tabEl.textContent = "Chat "+(id+1);
-  tabEl.onclick = () => switchTab(id);
-  document.getElementById("tabs").appendChild(tabEl);
-  switchTab(id);
+let model;
+async function loadModel() {
+    model = await window.transformers.AutoModelForCausalLM.from_pretrained('Xenova/gpt2-small');
 }
+loadModel();
 
-// Switch tabs
-function switchTab(i){
-  activeTab = i;
-  document.querySelectorAll(".tab").forEach((t,j)=>t.classList.toggle("active", i===j));
-  renderChat();
-}
+const chatbox = document.getElementById("chatbox");
+const input = document.getElementById("userInput");
+const sendBtn = document.getElementById("sendBtn");
 
-// Render chat
-function renderChat(){
-  const box = document.getElementById("chatbox");
-  box.innerHTML = "";
-  tabs[activeTab].messages.forEach(m=>{
-    const d = document.createElement("div");
-    d.className = "message "+m.sender;
-    d.textContent = m.text;
-    box.appendChild(d);
-  });
-  box.scrollTop = box.scrollHeight;
-}
+sendBtn.onclick = sendMessage;
+input.addEventListener("keypress", e=>{if(e.key==="Enter") sendMessage();});
 
-// Send message
-document.getElementById("sendBtn").onclick = sendMessage;
-document.getElementById("userInput").addEventListener("keypress", e => { if(e.key==="Enter") sendMessage(); });
-
-async function sendMessage(){
-  const input = document.getElementById("userInput");
+async function sendMessage() {
   const text = input.value.trim();
   if(!text) return;
-  input.value = "";
   addMessage("user", text);
-  addMessage("bot", "Typing... ⏳");
+  input.value="";
+  addMessage("bot","Typing... ⏳");
+
+  if(!model){
+    chatbox.lastChild.textContent = "[Model loading, please wait...]";
+    return;
+  }
 
   try {
-    // Use Hugging Face text-generation endpoint
-    const res = await fetch(HF_API_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ inputs: text, options: { wait_for_model: true } })
-    });
-    const data = await res.json();
-    const aiText = data[0]?.generated_text ? data[0].generated_text.replace(text,'').trim() : "Sorry, no response";
-
-    tabs[activeTab].messages = tabs[activeTab].messages.filter(m=>m.text!=="Typing... ⏳");
-    addMessage("bot", aiText);
-
+    const output = await model.generate([text], {max_length:50});
+    chatbox.lastChild.textContent = output[0].generated_text || "[No response]";
   } catch(e){
-    tabs[activeTab].messages = tabs[activeTab].messages.filter(m=>m.text!=="Typing... ⏳");
-    addMessage("bot", "[Error contacting AI]");
+    chatbox.lastChild.textContent = "[Error generating response]";
   }
 }
 
-// Add message to current tab
 function addMessage(sender,text){
-  tabs[activeTab].messages.push({sender,text});
-  renderChat();
+  const div = document.createElement("div");
+  div.className = "message "+sender;
+  div.textContent = text;
+  chatbox.appendChild(div);
+  chatbox.scrollTop = chatbox.scrollHeight;
 }
 </script>
 
