--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   --error: #DC2626;
   --success: #16A34A;
 }
+
 body {
   font-family: 'Segoe UI', sans-serif;
   margin: 0;
@@ -25,31 +26,74 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
 }
+
 .container {
   background: var(--surface);
   padding: 30px;
   border-radius: 20px;
   box-shadow: 0 0 20px rgba(0,0,0,0.1);
-  width: 350px;
+  width: 360px;
 }
-h2 {text-align:center; margin-bottom:20px;}
-input {width:100%; padding:10px; margin:10px 0; border-radius:10px; border:1px solid var(--border); background: var(--muted-bg);}
+
+h2 {text-align:center; margin-bottom:20px; color: var(--text-primary);}
+
+input {
+  width:100%;
+  padding:10px;
+  margin:10px 0;
+  border-radius:10px;
+  border:1px solid var(--border);
+  background: var(--muted-bg);
+  color: var(--text-primary);
+}
+
 button {
-  width:100%; padding:12px; margin-top:10px; border:none; border-radius:10px;
-  background: var(--primary); color:#fff; cursor:pointer; font-weight:bold;
+  width:100%;
+  padding:12px;
+  margin-top:10px;
+  border:none;
+  border-radius:10px;
+  background: var(--primary);
+  color:#fff;
+  cursor:pointer;
+  font-weight:bold;
+  transition:0.3s;
 }
 button:hover { background: var(--primary-hover); }
+
 #chatContainer { display:none; flex-direction:column; height:80vh; width:90vw; max-width:700px; }
-#chatbox { flex:1; overflow-y:auto; padding:15px; background:#fff; border-radius:15px; margin-bottom:10px; border:1px solid var(--border);}
-.message {padding:12px 18px;border-radius:25px;margin:8px 0;max-width:80%;word-wrap:break-word;display:inline-block;}
+
+#chatbox {
+  flex:1;
+  overflow-y:auto;
+  padding:15px;
+  background: var(--surface);
+  border-radius:15px;
+  margin-bottom:10px;
+  border:1px solid var(--border);
+}
+
+.message {
+  padding:12px 18px;
+  border-radius:25px;
+  margin:8px 0;
+  max-width:80%;
+  word-wrap:break-word;
+  display:inline-block;
+}
+
 .user {background: var(--primary); color:#fff; align-self:flex-end;}
-.bot {background: var(--muted-bg); color:#111827; align-self:flex-start;}
+.bot {background: var(--muted-bg); color: var(--text-primary); align-self:flex-start;}
+
 #inputContainer {display:flex;}
-#userInput {flex:1;padding:12px;border-radius:20px;border:1px solid var(--border);}
-#sendBtn {padding:12px 18px;margin-left:10px;border:none;border-radius:20px;background:var(--primary);color:#fff; cursor:pointer;}
+#userInput {flex:1; padding:12px; border-radius:20px; border:1px solid var(--border);}
+#sendBtn {padding:12px 18px; margin-left:10px; border:none; border-radius:20px; background:var(--primary); color:#fff; cursor:pointer;}
 #sendBtn:hover {background: var(--primary-hover);}
+
+#authMsg {color: var(--error); text-align:center; margin-top:10px;}
+#switchAuth {text-align:center; margin-top:10px; color: var(--text-secondary); cursor:pointer;}
 </style>
 </head>
 <body>
@@ -59,12 +103,12 @@ button:hover { background: var(--primary-hover); }
   <input type="email" id="email" placeholder="Email" required>
   <input type="password" id="password" placeholder="Password" required>
   <button id="authBtn">Sign Up</button>
-  <p id="switchAuth" style="text-align:center; margin-top:10px; color:var(--text-secondary); cursor:pointer;">Already have an account? Log In</p>
-  <p id="authMsg" style="color:var(--error); text-align:center;"></p>
+  <p id="switchAuth">Already have an account? Log In</p>
+  <p id="authMsg"></p>
 </div>
 
 <div id="chatContainer">
-  <header style="text-align:center; padding:10px; font-weight:bold; font-size:1.5rem; background: linear-gradient(90deg,#0FA2F5,#0F0,#0FA2F5); -webkit-background-clip:text; -webkit-text-fill-color:transparent; animation:gradientText 4s ease infinite;">Exel AI</header>
+  <header style="text-align:center; padding:10px; font-weight:bold; font-size:1.5rem; background: linear-gradient(90deg,var(--primary),#0F0,var(--primary)); -webkit-background-clip:text; -webkit-text-fill-color:transparent; animation:gradientText 4s ease infinite;">Exel AI</header>
   <div id="chatbox"></div>
   <div id="inputContainer">
     <input type="text" id="userInput" placeholder="Ask anything...">
@@ -77,7 +121,7 @@ button:hover { background: var(--primary-hover); }
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
 <script>
 const firebaseConfig = {
-  apiKey: "YOUR_API_KEY",
+  apiKey: "AIzaSyBblM3QvJGS93mw6gaX-tWCGtikVdjLxAs",
   authDomain: "YOUR_PROJECT.firebaseapp.com",
   projectId: "YOUR_PROJECT_ID",
 };
@@ -85,7 +129,7 @@ firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth();
 </script>
 
-<!-- AI (using GPT-2 in browser) -->
+<!-- AI (GPT-2 mini in browser) -->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.9.0/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@xenova/transformers@1.0.4/dist/transformers.min.js"></script>
 
@@ -121,6 +165,7 @@ authBtn.onclick = async ()=>{
 };
 
 // Show chat if logged in
+const chatContainer = document.getElementById("chatContainer");
 auth.onAuthStateChanged(user=>{
   if(user){
     authContainer.style.display="none";
@@ -129,7 +174,6 @@ auth.onAuthStateChanged(user=>{
 });
 
 // Chat AI
-const chatContainer = document.getElementById("chatContainer");
 const chatbox = document.getElementById("chatbox");
 const input = document.getElementById("userInput");
 const sendBtn = document.getElementById("sendBtn");
@@ -169,6 +213,5 @@ function addMessage(sender,text){
   chatbox.scrollTop = chatbox.scrollHeight;
 }
 </script>
-
 </body>
 </html>
