--- a/index.html
+++ b/index.html
@@ -122,8 +122,13 @@ button:hover { background: var(--primary-hover); }
 <script>
 const firebaseConfig = {
   apiKey: "AIzaSyBblM3QvJGS93mw6gaX-tWCGtikVdjLxAs",
-  authDomain: "YOUR_PROJECT.firebaseapp.com",
-  projectId: "YOUR_PROJECT_ID",
+  authDomain: "myproject-12345.firebaseapp.com",
+  projectId: "myproject-12345",
+  storageBucket: "myproject-12345.appspot.com",
+  messagingSenderId: "1234567890",
+  appId: "1:1234567890:web:abcdef123456"
+};
+
 };
 firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth();
