--- a/index.html
+++ b/index.html
@@ -122,12 +122,13 @@ button:hover { background: var(--primary-hover); }
 <script>
 const firebaseConfig = {
   apiKey: "AIzaSyBblM3QvJGS93mw6gaX-tWCGtikVdjLxAs",
-  authDomain: "myproject-12345.firebaseapp.com",
-  projectId: "myproject-12345",
-  storageBucket: "myproject-12345.appspot.com",
-  messagingSenderId: "1234567890",
-  appId: "1:1234567890:web:abcdef123456"
+  authDomain: "exel-ai.firebaseapp.com",
+  projectId: "exel-ai",
+  storageBucket: "exel-ai.firebasestorage.app",
+  messagingSenderId: "10267981709",
+  appId: "1:10267981709:web:a322dc7d5029fab4526fc4"
 };
+
 
 };
 firebase.initializeApp(firebaseConfig);
