--- a/index.html
+++ b/index.html
@@ -128,11 +128,8 @@ const firebaseConfig = {
   messagingSenderId: "10267981709",
   appId: "1:10267981709:web:a322dc7d5029fab4526fc4"
 };
-
-
-};
 firebase.initializeApp(firebaseConfig);
-const auth = firebase.auth();
+const auth = firebase.auth(); // ✅ now defined
 </script>
 
 <!-- AI (GPT-2 mini in browser) -->
