--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Exel AI — Premium</title>
+<title>Exel AI — Premium Dark</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 :root {
   --primary: #0FA2F5;
   --primary-hover: #0B82C5;
-  --background: #F8F9FB;
-  --surface: #FFFFFF;
-  --border: #E5E7EB;
-  --text-primary: #111827;
-  --text-secondary: #6B7280;
-  --muted-bg: #F3F4F6;
+  --background-start: #111827;
+  --background-end: #1F2937;
+  --surface: #1E293B;
+  --border: #374151;
+  --text-primary: #E0F2FE;
+  --text-secondary: #94A3B8;
+  --muted-bg: #2D3748;
   --error: #DC2626;
   --success: #16A34A;
 }
@@ -21,7 +22,7 @@
 body {
   font-family: 'Segoe UI', sans-serif;
   margin: 0;
-  background: var(--background);
+  background: linear-gradient(135deg, var(--background-start), var(--background-end));
   color: var(--text-primary);
   display: flex;
   justify-content: center;
@@ -33,18 +34,22 @@ body {
   background: var(--surface);
   padding: 30px;
   border-radius: 20px;
-  box-shadow: 0 0 20px rgba(0,0,0,0.1);
+  box-shadow: 0 0 30px rgba(15,162,245,0.5);
   width: 360px;
   text-align: center;
 }
 
-h2 {margin-bottom:20px; color: var(--text-primary);}
+h2 {
+  margin-bottom:20px;
+  color: var(--primary);
+  text-shadow: 0 0 10px #0FA2F5, 0 0 20px #0FA2F5, 0 0 30px #0FA2F5;
+}
 
 input {
   width:100%;
-  padding:10px;
+  padding:12px;
   margin:10px 0;
-  border-radius:10px;
+  border-radius:12px;
   border:1px solid var(--border);
   background: var(--muted-bg);
   color: var(--text-primary);
@@ -55,14 +60,15 @@ button {
   padding:12px;
   margin-top:10px;
   border:none;
-  border-radius:10px;
+  border-radius:12px;
   background: var(--primary);
   color:#fff;
   cursor:pointer;
   font-weight:bold;
   transition:0.3s;
+  box-shadow: 0 0 8px #0FA2F5, 0 0 20px #0FA2F5;
 }
-button:hover { background: var(--primary-hover); }
+button:hover { background: var(--primary-hover); box-shadow: 0 0 15px #0B82C5, 0 0 30px #0B82C5; }
 
 #chatContainer { display:none; flex-direction:column; height:80vh; width:90vw; max-width:700px; }
 
@@ -70,7 +76,7 @@ button:hover { background: var(--primary-hover); }
   flex:1;
   overflow-y:auto;
   padding:15px;
-  background: var(--surface);
+  background: var(--muted-bg);
   border-radius:15px;
   margin-bottom:10px;
   border:1px solid var(--border);
@@ -86,10 +92,10 @@ button:hover { background: var(--primary-hover); }
 }
 
 .user {background: var(--primary); color:#fff; align-self:flex-end;}
-.bot {background: var(--muted-bg); color: var(--text-primary); align-self:flex-start;}
+.bot {background: var(--surface); color: var(--text-primary); align-self:flex-start;}
 
 #inputContainer {display:flex;}
-#userInput {flex:1; padding:12px; border-radius:20px; border:1px solid var(--border);}
+#userInput {flex:1; padding:12px; border-radius:20px; border:1px solid var(--border); background:var(--muted-bg); color: var(--text-primary);}
 #sendBtn {padding:12px 18px; margin-left:10px; border:none; border-radius:20px; background:var(--primary); color:#fff; cursor:pointer;}
 #sendBtn:hover {background: var(--primary-hover);}
 
@@ -111,7 +117,7 @@ button:hover { background: var(--primary-hover); }
 
 <!-- Chat container -->
 <div id="chatContainer">
-  <header style="text-align:center; padding:10px; font-weight:bold; font-size:1.5rem; background: linear-gradient(90deg,var(--primary),#0F0,var(--primary)); -webkit-background-clip:text; -webkit-text-fill-color:transparent;">Exel AI</header>
+  <header style="text-align:center; padding:10px; font-weight:bold; font-size:1.5rem; text-shadow: 0 0 5px #0FA2F5, 0 0 15px #0FA2F5;">Exel AI</header>
   <div id="chatbox"></div>
   <div id="inputContainer">
     <input type="text" id="userInput" placeholder="Ask anything...">
@@ -124,7 +130,7 @@ button:hover { background: var(--primary-hover); }
 <script src="https://cdn.jsdelivr.net/npm/@xenova/transformers@1.0.4/dist/transformers.min.js"></script>
 
 <script>
-// Fake auth logic (UI only)
+// Fake auth logic
 const authContainer = document.getElementById("authContainer");
 const authTitle = document.getElementById("authTitle");
 const authBtn = document.getElementById("authBtn");
